--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="contenedor">
-        <h1 class="tateti">TaTeTi</h1>
+        <h1 class="tateti">Ta-Te-Ti</h1>
         <div id="mensaje"></div>
         <table id="tabla1">
             <tr>
